# grpc-gigachat

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
interfaces/python/: __init__.py  interface.py
src/gigacontroller/: __main__.py  config.py  context.py
src/gigacontroller/api/: __init__.py
src/gigacontroller/api/gigachat_services/: __init__.py
src/gigacontroller/api/gigachat_services/v1/: __init__.py  gptchat_v1.proto  gptchat_v1_pb2.py  gptchat_v1_pb2_grpc.py  service.py
src/gigacontroller/api/gigachat_services/v2/: __init__.py  base.py  chat_service.py  embeddings_service.py  models_service.py  schemas.py  utils.py
src/gigacontroller/api/gigachat_services/v2/protobufs/: __init__.py  gptchat_v2.proto  gptchat_v2_pb2.py  gptchat_v2_pb2_grpc.py
tests/v2/: conftest.py  test_gptchat_chat_service.py  test_gptchat_embeddings_service.py  test_gptchat_models_service.py
tests/v2/fixtures/: fixture_gigachat_interface.py
